# azure-pricing-to-bq

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_job.py
app/: bq_client.py  bq_setup.py  config.py  gcs_client.py
app/bq_schema/: azure_retail_prices_history.json  pricing_runs.json
app/services/: azure_client.py  loader.py  runs.py
azure_pricing_to_bq/: __main__.py
tests/: conftest.py  test_azure_client.py  test_bq_setup.py  test_loader.py  test_run_job.py  test_runs.py
