[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-pricing-to-bq"
version = "0.1.0"
description = "Daily loader for the Azure Retail Prices REST API into BigQuery. Runs as a CLI or Cloud Run Job."
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery==3.19.0",
    "google-cloud-storage==2.16.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "requests>=2.32",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "responses>=0.25",
    "ruff>=0.6",
]

[project.scripts]
azure-pricing-to-bq = "azure_pricing_to_bq.__main__:main"

[tool.setuptools.packages.find]
include = ["app*", "azure_pricing_to_bq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
